--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
@@ -91,9 +91,10 @@ $h5-font-size:1rem;
 
 // topbar
 $topbar-color: #0d3a58;
-$topbar-title-font-size: 1.8rem;
-$topbar-height: 4rem;
-$topbar-top-offset: 1rem;
+$topbar-title-font-size: 28px;
+$topbar-links-font-size: 23px;
+$topbar-height: 3rem;
+$topbar-offset: 1rem;
 
 //copyright
 $copyright-font-size: $font-scale-dot7;
